--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,12 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 
     //1、Specify version 1.6.10 of the Kotlin plugin in the root project for use in other project modules
     id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
+//    id 'com.google.devtools.ksp' version '1.6.10'
+//    id 'com.google.devtools.ksp' version '1.6.0-1.0.1'
 
 
 }
