--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,26 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp' version '1.6.0-1.0.1'
+
+    id 'dependence_checker'
+}
+
+dependenceChecker {
+    variant=""
+    abortBuild=false
+    whiteList = [
+            "androidx",
+//            "org",
+            "com.google"
+    ]
+
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId "com.example.myapplication2"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -33,6 +46,14 @@ android {
     buildFeatures {
         viewBinding true
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
+//    configurations.all {
+//        resolutionStrategy.force "com.squareup.okhttp3:okhttp:4.9.3"
+//    }
 }
 
 dependencies {
@@ -43,11 +64,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation project(path: ':javalibrary')
+    implementation project(path: ':androidlibrary')
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def roomVersion = "2.4.2"
+    def roomVersion = "2.4.1"
 
     implementation("androidx.room:room-runtime:$roomVersion")
 //    annotationProcessor("androidx.room:room-compiler:$roomVersion")
@@ -55,7 +78,7 @@ dependencies {
     // To use Kotlin annotation processing tool (kapt)
 //    kapt("androidx.room:room-compiler:$roomVersion")
     // To use Kotlin Symbolic Processing (KSP)
-    ksp("androidx.room:room-compiler:$roomVersion")
+//    ksp("androidx.room:room-compiler:$roomVersion")
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:$roomVersion")
@@ -74,4 +97,6 @@ dependencies {
 
     // optional - Paging 3 Integration
     implementation("androidx.room:room-paging:$roomVersion")
+
+//    implementation("com.squareup.okhttp3:okhttp:4.9.3")
 }
