--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,36 @@
 //1
 buildscript {
-    dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+    repositories {
+        maven {
+            url uri('repo')
+        }
+        google()
+        mavenCentral()
+        jcenter()
+
     }
-}
 
-plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 
-    //1、Specify version 1.6.10 of the Kotlin plugin in the root project for use in other project modules
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
-//    id 'com.google.devtools.ksp' version '1.6.10'
-//    id 'com.google.devtools.ksp' version '1.6.0-1.0.1'
-
-
+        classpath 'com.tt.plugin:dependence_checker:1.0.38'
+    }
 }
 
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+allprojects {
+    repositories {
+        maven {
+            url uri('repo')
+        }
+        google()
+        mavenCentral()
+        jcenter()
+
+    }
 }
