--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,7 @@
-pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        google()
-        mavenCentral()
-    }
-}
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+
 rootProject.name = "My Application"
 include (":app")
-include (":mylibrary")
+include ':javalibrary'
+include ':kotlinlibrary'
+include ':androidlibrary'
+include ':dependence_checker'
