--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.2.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 
-        classpath 'com.tt.plugin:dependence_checker:1.0.38'
+//        classpath 'com.tt.plugin:dependence_checker:1.0.38'
     }
 }
 
